# wascaml

./: .gitignore  CNAME  LICENSE  README.md  dune-project  flake.nix  index.html  wascaml.opam
.github/workflows/: ci.yml  generate-documents.yml
app/: app.ml  dune
compiler/: ast.ml  builtin.ml  codegen.ml  dune  inferer.ml  parser.ml  tokenizer.ml  tokens.ml  types.ml
runtime/: dune  instructions.ml  modules.ml  utils.ml  value.ml  wasi.ml
sanitizer/: dune  psan.py
test/: dune  empty.ml
test/compiler/: ast.ml  dune  e2e.ml
test/runtime/: dune  instructions.ml  value.ml
wascaml/: index.html
wascaml/Compiler/: index.html
wascaml/Compiler/Ast/: index.html
wascaml/Compiler/Builtin/: index.html
wascaml/Compiler/Codegen/: index.html
wascaml/Compiler/Codegen/Env/: index.html
wascaml/Compiler/Codegen/Funcs/: index.html
wascaml/Compiler/Inferer/: index.html
wascaml/Compiler/Parser/: index.html
wascaml/Compiler/Tokenizer/: index.html
wascaml/Compiler/Tokens/: index.html
wascaml/Compiler/Types/: index.html
wascaml/Runtime/: index.html
wascaml/Runtime/Instructions/: index.html
wascaml/Runtime/Modules/: index.html
wascaml/Runtime/Utils/: index.html
wascaml/Runtime/Value/: index.html
wascaml/Runtime/Wasi/: index.html
wascaml/Sanitizer/: index.html
wascaml/Sanitizer/Psan/: index.html
